force-app/main/default/src/objects/Account/fields/Caregiver_First_Name_on_Conversion_MVN__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_First_Name_on_Conversion_MVN__c</fullName>
    <description>Value of the &apos;Caregiver First Name&apos; field when the consumer was converted to an account.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Caregiver First Name on Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>