force-app/main/default/src/objects/Account/fields/Caregiver_Gender_on_Conversion_MVN__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_Gender_on_Conversion_MVN__c</fullName>
    <description>Value of the &apos;Caregiver Gender&apos; field when the consumer was converted to an account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Caregiver Gender on Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>