force-app/main/default/src/objects/Account/fields/Caregiver_Primary_on_Conversion_MVN__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_Primary_on_Conversion_MVN__c</fullName>
    <description>Indicates whether the &apos;Caregiver as Primary Contact&apos; checkbox was selected when the consumer was converted to an account.</description>
    <label>Caregiver Primary on Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_MVN</valueSetName>
    </valueSet>
</CustomField>