force-app/main/default/src/objects/Account/fields/Ed_Materials_Sent_on_Conversion_MVN__c.field-meta.xml
<CustomField>
    <fullName>Ed_Materials_Sent_on_Conversion_MVN__c</fullName>
    <description>Mapped field from the lead that indicates if educational materials have been sent to the participant at the time the lead is converted to an account. Used to help assign the correct care plan template.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Educational Materials Sent on Conversion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>