force-app/main/default/src/objects/Account/fields/Health_Cloud_System_ID_MVN__c.field-meta.xml
<CustomField>
    <fullName>Health_Cloud_System_ID_MVN__c</fullName>
    <description>System ID mapped from the Consumer record during conversion.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Health Cloud System ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>