force-app/main/default/src/objects/Account/fields/HealthCloudGA__EnrollmentType__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__EnrollmentType__c</fullName>
    <label>Enrollment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dual</fullName>
            </value>
            <value>
                <fullName>NonDual</fullName>
                <default>true</default>
                <label>NonDual</label>
            </value>
            <value>
                <fullName>FBDual</fullName>
            </value>
            <value>
                <fullName>PBDual</fullName>
            </value>
            <value>
                <fullName>ESRD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>