force-app/main/default/src/objects/Account/fields/HealthCloudGA__IndividualType__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__IndividualType__c</fullName>
    <description>Individual Type</description>
    <label>Individual Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>