force-app/main/default/src/objects/Account/fields/HealthCloudGA__Institution__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Institution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a patient is in a institution.</description>
    <inlineHelpText>Indicates whether a patient is in a institution.</inlineHelpText>
    <label>Institution</label>
    <type>Checkbox</type>
</CustomField>