force-app/main/default/src/objects/Account/fields/HealthCloudGA__MedicareEnrollee__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MedicareEnrollee__c</fullName>
    <description>New member or continued from previous year.</description>
    <inlineHelpText>New member or continued from previous year.</inlineHelpText>
    <label>Medicare Enrollee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Enrollee</fullName>
            </value>
            <value>
                <fullName>Continued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>