force-app/main/default/src/objects/Account/fields/HUB_ID_MVN__c.field-meta.xml
<CustomField>
    <fullName>HUB_ID_MVN__c</fullName>
    <description>External system ID passed from the HUB. Used to verify the correct record when searching.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>HUB ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>