force-app/main/default/src/objects/Account/fields/MVN_Age__c.field-meta.xml
<CustomField>
    <fullName>MVN_Age__c</fullName>
    <formula>IF( NOT( ISBLANK( MVN_Birthdate__c ) ) ,
  IF( DATE( 2000 , MONTH( MVN_Birthdate__c  ) , DAY( MVN_Birthdate__c  ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( MVN_Birthdate__c ),
     YEAR (Today()) - YEAR ( MVN_Birthdate__c ) -1 ),
  null)</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>