force-app/main/default/src/objects/Account/fields/MVN_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>MVN_Birthdate__c</fullName>
    <description>Custom Birthdate field that supports encryption and inclusion as search criteria/results in the custom Account Search</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>