force-app/main/default/src/objects/Account/fields/MVN_Group_NPI__c.field-meta.xml
<CustomField>
    <fullName>MVN_Group_NPI__c</fullName>
    <description>Text (10) NPI field.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Group NPI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>