force-app/main/default/src/objects/Account/fields/MVN_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Id__c</fullName>
    <description>Unique identifier for the patient. Displays a Legacy Id if one is available or the Salesforce Id if there is no Legacy Id.</description>
    <formula>IF(ISBLANK(MVN_Patient_Legacy_Id__c), MVN_Patient_Id_Auto_Number__c, MVN_Patient_Legacy_Id__c)</formula>
    <label>Patient Id</label>
    <type>Text</type>
</CustomField>