force-app/main/default/src/objects/Account/fields/MVN_Patient_Id_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Id_Auto_Number__c</fullName>
    <description>Referenced in Patient Id</description>
    <displayFormat>{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Patient Id Auto Number</label>
    <type>AutoNumber</type>
</CustomField>