force-app/main/default/src/objects/Account/fields/MVN_Patient_Id_Search__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Id_Search__c</fullName>
    <description>Supports searching for Patient Id in Account Search</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>