force-app/main/default/src/objects/Account/fields/MVN_Patient_Initials__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Initials__c</fullName>
    <description>Stamps the Patient Initials via Flow</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>