force-app/main/default/src/objects/Account/fields/MVN_Patient_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Legacy_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Stores a unique identifier for the patient from a legacy hub system.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Patient Legacy Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>