force-app/main/default/src/objects/Account/fields/MVN_Patient_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Name_Formula__c</fullName>
    <formula>Name &amp; &quot;&quot;</formula>
    <label>Patient Name</label>
    <type>Text</type>
</CustomField>