force-app/main/default/src/objects/Account/fields/MVN_Payer_Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Payer_Channel_Name__c</fullName>
    <description>Payer master name assigned by Precision to each Enterprise / Population combination</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payer Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>