force-app/main/default/src/objects/Account/fields/MVN_Payer_Channel_Precision_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Payer_Channel_Precision_Id__c</fullName>
    <description>Payer master unique ID assigned by Precision to each Enterprise / Population combination</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payer Channel Precision Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>