force-app/main/default/src/objects/Account/fields/MVN_Precision_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Precision_Id__c</fullName>
    <description>Payer master unique ID assigned by Precision to each parent organization</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Precision Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>