force-app/main/default/src/objects/Account/fields/MVN_Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>MVN_Preferred_Contact_Method__c</fullName>
    <label>Preferred Contact Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>