force-app/main/default/src/objects/Account/fields/MVN_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>MVN_Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Address</label>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipLabel>Accounts (Shipping Address)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>