force-app/main/default/src/objects/Account/fields/MVN_Shipping_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Shipping_Address_Formula__c</fullName>
    <formula>MVN_Shipping_Address__r.PJN_Value__c</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>