force-app/main/default/src/objects/Account/fields/MVN_SMS_Phone__c.field-meta.xml
<CustomField>
    <fullName>MVN_SMS_Phone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMS Phone</label>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipLabel>Accounts (SMS Phone)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>