force-app/main/default/src/objects/Account/fields/MVN_SMS_Phone_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_SMS_Phone_Formula__c</fullName>
    <formula>MVN_SMS_Phone__r.PJN_Value__c</formula>
    <label>SMS Phone</label>
    <type>Text</type>
</CustomField>