force-app/main/default/src/objects/Account/fields/PJN_Credentials__c.field-meta.xml
<CustomField>
    <fullName>PJN_Credentials__c</fullName>
    <description>Picklist: Physician&apos;s credentials.</description>
    <inlineHelpText>Physician credentials</inlineHelpText>
    <label>Credentials</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>ACDT</fullName>
            </value>
            <value>
                <fullName>ADS</fullName>
            </value>
            <value>
                <fullName>ADT</fullName>
            </value>
            <value>
                <fullName>AMT</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>ATH</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>DAUD</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>DDS</fullName>
            </value>
            <value>
                <fullName>DH</fullName>
            </value>
            <value>
                <fullName>DLT</fullName>
            </value>
            <value>
                <fullName>DMD</fullName>
            </value>
            <value>
                <fullName>DN</fullName>
            </value>
            <value>
                <fullName>DNT</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>DO-L</fullName>
            </value>
            <value>
                <fullName>DOM</fullName>
            </value>
            <value>
                <fullName>DON</fullName>
            </value>
            <value>
                <fullName>DO-S</fullName>
            </value>
            <value>
                <fullName>DPM</fullName>
            </value>
            <value>
                <fullName>DRPH</fullName>
            </value>
            <value>
                <fullName>DT</fullName>
            </value>
            <value>
                <fullName>DVM</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>EST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>