force-app/main/default/src/objects/Account/fields/PJN_DEA__c.field-meta.xml
<CustomField>
    <fullName>PJN_DEA__c</fullName>
    <description>Text (9) field for Physician Account DEA.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DEA</label>
    <length>9</length>
    <type>Text</type>
</CustomField>