force-app/main/default/src/objects/Account/fields/PJN_Last_4_of_SSN__c.field-meta.xml
<CustomField>
    <fullName>PJN_Last_4_of_SSN__c</fullName>
    <description>Text (4) Last 4 digits of Social Security Number.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last 4 of SSN</label>
    <length>4</length>
    <type>Text</type>
</CustomField>