force-app/main/default/src/objects/Account/fields/PJN_Last_Date_Network_Modified__c.field-meta.xml
<CustomField>
    <fullName>PJN_Last_Date_Network_Modified__c</fullName>
    <description>Last date network record is modified.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Date Network Modified</label>
    <type>DateTime</type>
</CustomField>