force-app/main/default/src/objects/Account/fields/PJN_Last_Date_Network_Synced__c.field-meta.xml
<CustomField>
    <fullName>PJN_Last_Date_Network_Synced__c</fullName>
    <description>Last date network record is synced.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Date Network Synced</label>
    <type>DateTime</type>
</CustomField>