force-app/main/default/src/objects/Account/fields/PJN_Network_DCR_Eligible__c.field-meta.xml
<CustomField>
    <fullName>PJN_Network_DCR_Eligible__c</fullName>
    <description>Marks whether the record is eligible for DCR creation for Veeva Network</description>
    <formula>NOT(ISPICKVAL(PJN_Status__c, &apos;Rejected By Network&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Network DCR Eligible</label>
    <type>Checkbox</type>
</CustomField>