force-app/main/default/src/objects/Account/fields/PJN_Network_Override__c.field-meta.xml
<CustomField>
    <fullName>PJN_Network_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag  when ticked indicates that the insert / edit is done by Veeva Network and that it shouldn&apos;t create a DCR</description>
    <inlineHelpText>This flag  when ticked indicates that the insert / edit is done by Veeva Network and that it shouldn&apos;t create a DCR</inlineHelpText>
    <label>Network Override</label>
    <type>Checkbox</type>
</CustomField>