force-app/main/default/src/objects/Account/fields/PJN_Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup (Contact Information) filtered on the Address record type.</description>
    <label>Primary Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PJN_Contact_Information__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Address</value>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>PJN_Contact_Information__c.PJN_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>