force-app/main/default/src/objects/Account/fields/PJN_Primary_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Address_Formula__c</fullName>
    <description>Formula to return the account&apos;s primary address.</description>
    <formula>PJN_Primary_Address__r.PJN_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Address</label>
    <type>Text</type>
</CustomField>