force-app/main/default/src/objects/Account/fields/PJN_Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup (Contact Information) filtered on the Email record type.</description>
    <label>Primary Email</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PJN_Contact_Information__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Email</value>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>PJN_Contact_Information__c.PJN_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipLabel>Accounts (Primary Email)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>