force-app/main/default/src/objects/Account/fields/PJN_Primary_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Email_Formula__c</fullName>
    <description>Formula to return the account&apos;s primary email address, to be used in search views.</description>
    <formula>PJN_Primary_Email__r.PJN_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Email</label>
    <type>Text</type>
</CustomField>