force-app/main/default/src/objects/Account/fields/PJN_Primary_Phone_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Primary_Phone_Formula__c</fullName>
    <description>Formula to return the account&apos;s primary phone number, displayed as (xxx) xxx-xxxx, to be used in search views.</description>
    <formula>PJN_Primary_Phone__r.PJN_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Phone</label>
    <type>Text</type>
</CustomField>