force-app/main/default/src/objects/Account/fields/PJN_Professional_Designation__c.field-meta.xml
<CustomField>
    <fullName>PJN_Professional_Designation__c</fullName>
    <description>Picklist for Physician Account Credentials or Professional Designation.</description>
    <label>Professional Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>