force-app/main/default/src/objects/Account/fields/PJN_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Record_Type__c</fullName>
    <description>Display Record Type Name in Account Search results.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>